FIX: Radio button was not vertically aligned to its label (#357)

--- a/src/gui/Components/Form/RadioButton.module.scss
+++ b/src/gui/Components/Form/RadioButton.module.scss
@@ -4,9 +4,12 @@
 
 .input{
   margin-left: 0;
+  margin-top: 0;
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .label{
   cursor: pointer;
+  vertical-align: middle;
 }
